I optimized the seo

--- a/blog.html
+++ b/blog.html
@@ -3,10 +3,10 @@
 
 <head>
   <meta charset="utf-8">
-  <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Blog - Nova Bootstrap Template</title>
-  <meta name="description" content="">
-  <meta name="keywords" content="">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Victory Outreach Ministry - Christian Church in Lira, Uganda</title>
+  <meta name="description" content="Victory Outreach Ministry is a Christian church in Lira, Uganda, dedicated to spreading the Gospel, empowering communities, and transforming lives through faith and service. Join us for worship, prayer, and fellowship.">
+  <meta name="keywords" content="Victory Outreach Ministry, Christian church Lira, Uganda church, gospel ministry, faith-based community, church services, worship center, evangelical church, Christian fellowship, spiritual growth, prayer meetings, youth ministry, church in Lira Uganda">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
@@ -27,13 +27,37 @@
   <!-- Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
 
-  <!-- =======================================================
-  * Template Name: Nova
-  * Template URL: https://bootstrapmade.com/nova-bootstrap-business-template/
-  * Updated: Aug 07 2024 with Bootstrap v5.3.3
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
+  <!-- Open Graph Meta Tags for Social Media -->
+  <meta property="og:title" content="Victory Outreach Ministry - Christian Church in Lira, Uganda">
+  <meta property="og:description" content="Join Victory Outreach Ministry in Lira, Uganda, for uplifting worship services, prayer meetings, and community outreach programs.">
+  <meta property="og:image" content="assets/img/church-banner.jpg">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://victoryoutreachministry.com">
+
+  <!-- Twitter Card Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Victory Outreach Ministry - Christian Church in Lira, Uganda">
+  <meta name="twitter:description" content="Experience powerful worship, prayer, and community at Victory Outreach Ministry in Lira.">
+  <meta name="twitter:image" content="assets/img/church-banner.jpg">
+
+  <!-- Schema Markup for Local SEO -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Church",
+    "name": "Victory Outreach Ministry",
+    "address": {
+      "@type": "PostalAddress",
+      "streetAddress": "Main Street",
+      "addressLocality": "Lira",
+      "addressCountry": "UG"
+    },
+    "telephone": "+256777676206",
+    "description": "Victory Outreach Ministry is a vibrant Christian church in Lira, Uganda, dedicated to spreading the Gospel and serving the community.",
+    "url": "https://victoryoutreachministry.com",
+    "image": "assets/img/church-banner.jpg"
+  }
+  </script>
 </head>
 
 <body class="blog-page">
