Updated the footer

--- a/index.html
+++ b/index.html
@@ -502,11 +502,11 @@
   
           <div class="col-lg-3 col-md-12 footer-contact text-center text-md-start">
             <h4>Contact Us</h4>
-            <p>Church Address Here</p>
-            <p>City, ZIP Code</p>
-            <p>Country</p>
+            <p>Lira City</p>
+            <p>Olwol Road</p>
+            <p>Uganda</p>
             <p class="mt-4"><strong>Phone:</strong> <span>0777676206</span></p>
-            <p><strong>Email:</strong> <span>info@yourchurch.com</span></p>
+            <p><strong>Email:</strong> <span>info@vom.com</span></p>
           </div>
   
         </div>
@@ -514,16 +514,16 @@
     </div>
   
     <div class="container copyright text-center">
-      <p>© <span>Copyright</span> <strong class="px-1 sitename">Your Church Name</strong> <span>All Rights Reserved</span></p>
+      <p>© <span>Copyright</span> <strong class="px-1 sitename">Victory Outreach Ministry</strong> <span>All Rights Reserved</span></p>
       <div class="credits">
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a> Distributed by <a href="https://themewagon.com">ThemeWagon</a>
+        Designed by <a href="https://kakebetechnologies.com/">Kakebe Technologies</a> | Powered by <a href="https://vom.com/">Victory Outreach Ministry</a>
       </div>
     </div>
   
   </footer>
   
   <!-- Scroll Top -->
-  <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+  <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center "><i class="bi bi-arrow-up-short"></i></a>
 
   <!-- Preloader -->
   <div id="preloader"></div>
