--- a/service-details.html
+++ b/service-details.html
@@ -59,38 +59,27 @@
     </script>
   </head>
 <body class="service-details-page">
-  <header id="header" class="header d-flex align-items-center fixed-top">
-    <div class="container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
+ <!-- Header Start -->
+<div class="container-fluid position-relative mb-5 p-0" style="overflow: hidden; height: 400px;">
+  <!-- Embedded YouTube Video -->
+  <iframe class="position-absolute w-100 h-100" style="top: 0; left: 0; z-index: -1; object-fit: cover;"
+      src="https://www.youtube.com/embed/YOUTUBE_VIDEO_ID?autoplay=1&mute=1&loop=1&playlist=YOUTUBE_VIDEO_ID"
+      title="Memories - One Voice" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen>
+  </iframe>
 
-      <a href="index.html" class="logo d-flex align-items-center">
-        <!-- Uncomment the line below if you also wish to use an image logo -->
-        <!-- <img src="assets/img/logo.png" alt=""> -->
-        <h1 class="sitename">Victory OutReach Ministry.</h1>
-      </a>
+  <!-- Content -->
+  <div class="d-flex flex-column align-items-center justify-content-center text-center position-relative" 
+       style="min-height: 400px; z-index: 2; background: rgba(0, 0, 0, 0.6);">
+      <h3 class="display-3 font-weight-bold text-white">Our Story</h3>
+      <div class="d-inline-flex text-white">
+          <p class="m-0"><a class="text-white" href="">Home</a></p>
+          <p class="m-0 px-2">/</p>
+          <p class="m-0">Our Story</p>
+      </div>
+  </div>
+</div>
+<!-- Header End -->
 
-      <nav id="navmenu" class="navmenu">
-        <ul>
-          <li><a href="index.html">Home<br></a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="services.html">Services</a></li>
-          <li><a href="projects.html">Projects</a></li>
-          <li><a href="team.html">Team</a></li>
-          <li><a href="blog.html">Blog</a></li>
-          <li class="dropdown"><a href="#"><span>Pages</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
-            <ul>
-              <li><a href="#">Victory Outreach North</a></li>
-              <li><a href="#">CDC</a></li>
-              <li><a href="#">Ministries</a></li>
-              <li><a href="#">School</a></li>
-            </ul>
-          </li>
-          <li><a href="contact.html">Contact</a></li>
-        </ul>
-        <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
-      </nav>
-
-    </div>
-  </header>
 
   <main class="main">
 
@@ -214,11 +203,11 @@
   
           <div class="col-lg-3 col-md-12 footer-contact text-center text-md-start">
             <h4>Contact Us</h4>
-            <p>Church Address Here</p>
-            <p>City, ZIP Code</p>
-            <p>Country</p>
+            <p>Lira City</p>
+            <p>Olwol Road</p>
+            <p>Uganda</p>
             <p class="mt-4"><strong>Phone:</strong> <span>0777676206</span></p>
-            <p><strong>Email:</strong> <span>info@yourchurch.com</span></p>
+            <p><strong>Email:</strong> <span>info@vom.com</span></p>
           </div>
   
         </div>
@@ -226,9 +215,9 @@
     </div>
   
     <div class="container copyright text-center">
-      <p>© <span>Copyright</span> <strong class="px-1 sitename">Your Church Name</strong> <span>All Rights Reserved</span></p>
+      <p>© <span>Copyright</span> <strong class="px-1 sitename">Victory Outreach Ministry</strong> <span>All Rights Reserved</span></p>
       <div class="credits">
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a> Distributed by <a href="https://themewagon.com">ThemeWagon</a>
+        Designed by <a href="https://kakebetechnologies.com/">Kakebe Technologies</a> | Powered by <a href="https://vom.com/">Victory Outreach Ministry</a>
       </div>
     </div>
   
